--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.14.1",
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
-  "keywords": ["discord", "bot", "femboy", "javascript"],
+  "keywords": [
+    "discord",
+    "bot",
+    "femboy",
+    "javascript"
+  ],
   "author": "",
   "license": "MIT"
 }
